# kana

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  build.zig
data/: hiragana.toml  katakana.toml
doc/: kana.1.sdc
src/: Config.zig  Fsm.zig  Input.zig  chouonpu.zig  cli.rs  config.rs  helpers.zig  hiragana.zig  katakana.zig  lib.zig  main.rs  main.zig  parser.rs  punctuation.zig  run.rs  sokuon.zig  spec.rs  state.rs  tests.zig
src/parser/: machine.rs  mod.rs  util.rs
src/parser/states/: choonpu.rs  digraph.rs  kana_toggle.rs  long.rs  long_digraph.rs  medium.rs  mod.rs  monograph.rs  nasal.rs  short.rs  sukuon.rs  syllabogram.rs  tiny.rs  toggle.rs
src/testdata/: extended_katakana.toml  pokemon.scfg  punctuation.toml  syllabary.scfg
wrkspc/kana-cli/: Cargo.toml  build.rs
wrkspc/kana-cli/src/: cli.rs  main.rs
wrkspc/kana-core/: Cargo.toml
wrkspc/kana-core/src/: lib.rs  transliterate.rs
wrkspc/kana-core/src/parser/: fsm.rs  input.rs  kana.rs  mod.rs  switch.rs  utf8.rs  util.rs
wrkspc/kana-core/src/parser/glyphs/: chouonpu.rs  hiragana.rs  katakana.rs  katakana.rs.tq3JEM  mod.rs  punctuation.rs  sokuon.rs
wrkspc/kana-core/tests/: transliterate_test.rs
wrkspc/kana-core/tests/data/: extended_katakana.toml  hiragana.toml  katakana.toml  pokemon.toml  punctuation.toml
