[package]
name = "kana"
authors = ["Gabriel Sanches <gabriel@gsr.dev>"]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=3.2.5", features = ["derive"] }
serde = { version = "=1.0.133", features = ["derive"] }
toml = "=0.5.8"

[build-dependencies]
clap = { version = "=3.2.5", features = ["derive"] }
clap_complete = "=3.2.3"
