[package]
name = "kana"
authors = ["Gabriel Sanches <gabriel@gsr.dev>"]
version = "0.3.0"
edition = "2021"
repository = "https://git.sr.ht/~gbrlsnchs/kana"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=3.2.5", default-features = false, features = ["derive", "std", "suggestions"] }
serde = { version = "=1.0.133", features = ["derive"] }
toml = "=0.5.8"

[build-dependencies]
clap = { version = "=3.2.5", default-features = false, features = ["derive", "std", "suggestions"] }
clap_complete = "=3.2.3"
