[package]
name = "kana_cli"
authors = ["Gabriel Sanches <gabriel@gsr.dev>"]
version = "1.0.0"
repository = "https://git.sr.ht/~gbrlsnchs/kana"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kana = { path = "../kana-core" }

[dependencies.clap]
version = "=4.0.29"
default-features = false
features = [
	"derive",
	"help",
	"std",
	"suggestions",
	"usage",
	"wrap_help",
]
