[package]
name = "kana_cli"
authors = ["Gabriel Sanches <gabriel@gsr.dev>"]
version = "1.0.0"
repository = "https://git.sr.ht/~gbrlsnchs/kana"
edition = "2021"

[[bin]]
name = "kana"
path = "src/main.rs"

[dependencies]
kana = { path = "../kana-core" }

[dependencies.clap]
version = "=4.0.29"
default-features = false
features = [
	"derive",
	"help",
	"std",
	"suggestions",
	"usage",
	"wrap_help",
]

[build-dependencies]
clap_complete = "=4.0.6"
project-root = "=0.2.2"

[build-dependencies.clap]
version = "=4.0.29"
default-features = false
features = ["derive"]
