[package]
name = "kana"
version = "1.0.0"
authors = ["Gabriel Sanches <gabriel@gsr.dev>"]
repository = "https://git.sr.ht/~gbrlsnchs/kana"
edition = "2021"

[dependencies]
phf = { version = "=0.11.1", default-features = false, features = ["macros"] }

[dev-dependencies]
default_macro = { version = "0.2.1" }
pretty_assertions = { version = "1.3.0" }
toml = { version = "=0.5.10" }
